tests/NormalTests/paczka1/fuzzy1/44414523.err
Error in line 1: PeZEDHeBs A745 15,8
Error in line 10: PeZEDHeBs S952 320,3
Error in line 22: PeZEDHeBs A541 98,2
Error in line 18: SsDOesE A745 54,4
Error in line 33: gNA0 A745 62,8
Error in line 35: gNA0 A541 1,6
